--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.15.2",
     "css-loader": "^0.26.1",
     "debug": "^2.5.1",
+    "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "jade": "^1.11.0",
     "jquery": "^3.1.1",
