--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "pusher-js": "^4.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
     "sass-loader": "^4.1.1",
     "simple-peer": "^6.1.0",
     "style-loader": "^0.13.1",
