--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "debug": "^3.1.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "pug": "^2.0.0-rc.4"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
