--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "node-video-chat",
   "version": "1.0.0",
-  "description": "A video chat using NodeJS and WebSockets",
-  "main": "bin/start.js",
-  "bin": {
-    "node-video-chat": "start.js"
-  },
+  "description": "A video chat using NodeJS, GraphQL, React, and WebSockets",
+  "main": "build/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bin/start"
+    "start": "node build/server"
   },
   "repository": {
     "type": "git",
@@ -21,12 +18,22 @@
   },
   "homepage": "https://github.com/DCtheTall/node-video-chat#readme",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
-    "pug": "^2.0.0-rc.4"
+    "prop-types": "^15.6.0",
+    "pug": "^2.0.0-rc.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "webpack": "^3.11.0",
+    "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
