--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "webpack": "^3.11.0",
+    "webpack-bundle-analyzer": "^2.10.0",
     "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
