--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
     "morgan": "^1.9.0",
+    "node-fetch": "^2.0.0",
     "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
