--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql-tag": "^2.8.0",
     "morgan": "^1.9.0",
     "node-fetch": "^2.0.0",
+    "pg": "^7.4.1",
     "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
@@ -43,6 +44,7 @@
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
+    "sequelize": "^4.33.4",
     "webpack": "^3.11.0",
     "webpack-bundle-analyzer": "^2.10.0",
     "webpack-node-externals": "^1.6.0"
