--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "apollo-cache-inmemory": "^1.1.9",
     "apollo-client": "^2.2.5",
     "apollo-link-http": "^1.4.0",
+    "apollo-link-schema": "^1.0.6",
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
     "dotenv": "^5.0.0",
@@ -35,6 +39,8 @@
     "graphql-tag": "^2.8.0",
     "morgan": "^1.9.0",
     "node-fetch": "^2.0.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
@@ -46,7 +52,6 @@
     "react-router-dom": "^4.2.2",
     "sequelize": "^4.33.4",
     "webpack": "^3.11.0",
-    "webpack-bundle-analyzer": "^2.10.0",
     "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
