--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-graphql": "^0.6.12",
+    "express-session": "^1.15.6",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
     "morgan": "^1.9.0",
