--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,7 @@
     "models": true,
     "successResponse": true,
     "failureResponse": true,
-    "ObjectId": true
+    "errorResponse": true
   },
   "plugins": [
     "jsx-a11y",
