--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "bcrypt": "^1.0.3",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "compression": "^1.7.2",
+    "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
