set up redux-actions

--- a/package.json
+++ b/package.json
@@ -51,9 +51,14 @@
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "sequelize": "^4.33.4",
     "webpack": "^3.11.0",
     "webpack-node-externals": "^1.6.0"
