starting jwt auth for graphql instead of session and rest

--- a/package.json
+++ b/package.json
@@ -38,13 +38,12 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-graphql": "^0.6.12",
-    "express-session": "^1.15.6",
+    "express-jwt": "^5.3.0",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
+    "jsonwebtoken": "^8.1.1",
     "morgan": "^1.9.0",
     "node-fetch": "^2.0.0",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
