--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.9",
     "apollo-client": "^2.2.5",
-    "apollo-link": "^1.2.1",
     "apollo-link-http": "^1.4.0",
     "apollo-link-schema": "^1.0.6",
     "axios": "^0.18.0",
@@ -35,6 +34,7 @@
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
+    "cookies": "^0.7.1",
     "debug": "^3.1.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
