--- a/package.json
+++ b/package.json
@@ -35,16 +35,19 @@
     "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
     "cookies": "^0.7.1",
+    "css-loader": "^0.28.10",
     "debug": "^3.1.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-graphql": "^0.6.12",
     "express-jwt": "^5.3.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
     "jsonwebtoken": "^8.1.1",
     "morgan": "^1.9.0",
     "node-fetch": "^2.0.0",
+    "node-sass": "^4.7.2",
     "pg": "^7.4.1",
     "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
@@ -59,7 +62,9 @@
     "redux-actions": "^2.2.1",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.7",
     "sequelize": "^4.33.4",
+    "style-loader": "^0.20.2",
     "validator": "^9.4.1",
     "webpack": "^3.11.0",
     "webpack-node-externals": "^1.6.0"
