--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-client": "^2.2.5",
     "apollo-link-http": "^1.4.0",
     "apollo-link-schema": "^1.0.6",
+    "autoprefixer": "^8.1.0",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -48,7 +49,9 @@
     "morgan": "^1.9.0",
     "node-fetch": "^2.0.0",
     "node-sass": "^4.7.2",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "pg": "^7.4.1",
+    "postcss-loader": "^2.1.1",
     "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
