--- a/.eslintrc
+++ b/.eslintrc
@@ -60,6 +60,7 @@
       }
     ],
     "no-underscore-dangle": 0,
+    "react/no-array-index-key": 0,
     "react/require-default-props": 0,
     "no-return-assign": 0,
     "react/prefer-stateless-function": 0
