--- a/.eslintrc
+++ b/.eslintrc
@@ -63,6 +63,7 @@
     "react/no-array-index-key": 0,
     "react/require-default-props": 0,
     "no-return-assign": 0,
-    "react/prefer-stateless-function": 0
+    "react/prefer-stateless-function": 0,
+    "strict": 0
   }
 }
