--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "classnames": "^2.2.5",
     "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
     "cookies": "^0.7.1",
