--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "graphql-tag": "^2.8.0",
     "jsonwebtoken": "^8.1.1",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.21.0",
     "morgan": "^1.9.0",
     "node-fetch": "^2.0.0",
+    "node-pre-gyp": "^0.8.0",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "pg": "^7.4.1",
