--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.7",
     "sequelize": "^4.33.4",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "style-loader": "^0.20.2",
     "validator": "^9.4.1",
     "webpack": "^3.11.0",
