--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "express-jwt": "^5.3.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "graphql": "^0.13.1",
+    "graphql-redis-subscriptions": "^1.4.0",
+    "graphql-subscriptions": "^0.5.8",
     "graphql-tag": "^2.8.0",
     "jsonwebtoken": "^8.1.1",
     "lodash.debounce": "^4.0.8",
