--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "sequelize": "^4.33.4",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
+    "socket.io-redis": "^5.2.0",
     "socketio-jwt": "^4.5.0",
     "style-loader": "^0.20.2",
     "subscriptions-transport-ws": "^0.9.6",
