--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "graphql-subscriptions": "^0.5.8",
     "graphql-tag": "^2.8.0",
     "jsonwebtoken": "^8.1.1",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.21.0",
     "morgan": "^1.9.0",
