--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "socket.io-client": "^2.1.0",
     "socket.io-p2p": "^2.2.0",
     "socket.io-p2p-server": "^1.2.0",
-    "socket.io-redis": "^5.2.0"
+    "socket.io-redis": "^5.2.0",
+    "webrtc-adapter": "^6.1.5"
   }
 }
