--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "ecstatic": "^3.2.0",
+    "enum": "^2.5.0",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
     "socket.io-p2p": "^2.2.0",
-    "socket.io-p2p-server": "^1.2.0",
     "socket.io-redis": "^5.2.0",
     "webrtc-adapter": "^6.1.5"
   }
