--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "css-loader": "^0.28.10",
     "debug": "^3.1.0",
     "dotenv": "^5.0.0",
+    "enum": "^2.5.0",
     "express": "^4.16.2",
     "express-graphql": "^0.6.12",
     "express-jwt": "^5.3.0",
@@ -88,7 +89,8 @@
     "subscriptions-transport-ws": "^0.9.6",
     "validator": "^9.4.1",
     "webpack": "^3.11.0",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.6.0",
+    "webrtc-adapter": "^6.1.5"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
