--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "pg": "^7.4.1",
+    "pizzicato": "^0.6.3",
     "postcss-loader": "^2.1.1",
     "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
