--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "apollo-link-ws": "^1.0.7",
     "apollo-utilities": "^1.0.10",
     "autoprefixer": "^8.1.0",
+    "aws-sdk": "^2.249.1",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
