--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "graphql-redis-subscriptions": "^1.4.0",
     "graphql-subscriptions": "^0.5.8",
     "graphql-tag": "^2.8.0",
+    "image-size": "^0.6.2",
     "jsonwebtoken": "^8.1.1",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
