--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "build/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node build/server"
+    "start": "node build/server",
+    "heroku-postbuild": "webpack --progress"
   },
   "repository": {
     "type": "git",
