--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build/server",
-    "heroku-postbuild": "webpack --progress"
+    "heroku-postbuild": "webpack -p --progress"
   },
   "repository": {
     "type": "git",
