set node version

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "bugs": {
     "url": "https://github.com/DCtheTall/node-video-chat/issues"
   },
+  "engines": {
+    "node": "8.9.0"
+  },
   "homepage": "https://github.com/DCtheTall/node-video-chat#readme",
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.9",
