separated subscription server onto separate server

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-node8": "^1.2.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "bcrypt": "^1.0.3",
