--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "twilio": "^3.17.1",
     "validator": "^9.4.1",
     "webpack": "~3.11.0",
+    "webpack-manifest-plugin": "^2.0.3",
     "webpack-node-externals": "^1.6.0",
     "webrtc-adapter": "^6.1.5"
   },
