--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "jsonwebtoken": "^8.1.1",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
     "moment": "^2.21.0",
     "morgan": "^1.9.0",
     "node-fetch": "^2.0.0",
